syntax = "proto3";

message OrderItemToValidate {
    string clotheId = 1;
    string colorId = 2;
    string sizeId = 3;
    int32 quantity = 4;
}

message ValidateOrderItemsRequest {
    repeated OrderItemToValidate items = 1;
}

message ValidateOrderItemResponse {
    bool isValid = 1;
    string errorMessage = 2;
    string clotheName = 3;
    string price = 4;
    string mainPhotoUrl = 5;
    string colorHexCode = 6;
    string sizeName = 7;
}

message ValidateOrderItemsResponse {
    repeated ValidateOrderItemResponse results = 1;
}

service OrderItemValidator {
    rpc ValidateOrderItems (ValidateOrderItemsRequest) returns (ValidateOrderItemsResponse);
}